--- a/reactx/src/components/slider/Slideshow.css
+++ b/reactx/src/components/slider/Slideshow.css
@@ -1,5 +1,136 @@
 .slide-show-container {
   max-width: 100%;
+  height: 30rem;
+  margin: auto 0;
+  position: relative;
+  overflow: hidden;
+  box-shadow: 0 10px 20px rgba(112, 35, 35, 0.2);
+}
+@media screen and (max-width: 43rem) {
+  .container-slider {
+    margin: 100px 10px 0;
+  }
+}
+.slide {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  opacity: 0;
+  transition: opacity ease-in-out 0.4s;
+}
+.slide img {
+  width: 100%;
+  height: 0, auto;
+  object-fit: cover;
+}
+.active-anim {
+  opacity: 1;
+}
+
+.btn-slide {
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  background: #f1f1f1;
+  border: 1px solid rgba(34, 34, 34, 0.287);
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+
+.btn-slide img {
+  width: 25px;
+  height: 25px;
+  pointer-events: none;
+}
+.prev {
+  top: 50%;
+  left: 20px;
+  transform: translateY(-60%);
+}
+.next {
+  top: 50%;
+  right: 20px;
+  transform: translateY(-60%);
+}
+
+.container-dots {
+  position: absolute;
+  bottom: 10px;
+  left: 50%;
+  transform: translateX(-50%);
+  display: flex;
+}
+.dot {
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  border: 3px solid #f1f1f1;
+  margin: 0 5px;
+  background: #f1f1f1;
+}
+.dot.active {
+  background: rgb(32, 32, 32);
+}
+
+@media only screen and (min-width: 34rem) {
+  .slide-show-container {
+    max-width: 100%;
+    height: 0, auto;
+  }
+  .slide-show-image {
+  }
+}
+
+@media only screen and (min-width: 45rem) {
+}
+
+@media only screen and (min-width: 53rem) {
+  .slide-show-container {
+    max-width: 100%;
+    max-height: 100%;
+  }
+  .slide-show-image {
+    width: 100%;
+    height: fit-content;
+  }
+}
+
+@media only screen and (min-width: 65rem) {
+}
+
+@media only screen and (min-width: 74rem) {
+}
+
+@media only screen and (min-width: 85rem) {
+}
+
+@media only screen and (min-width: 100rem) {
+}
+
+@media only screen and (min-width: 120rem) {
+}
+
+@media only screen and (min-width: 130rem) {
+}
+
+@media only screen and (min-width: 140rem) {
+  .slide-show-container {
+    width: 100%;
+    max-width: 100%;
+    height: 0, auto;
+  }
+
+  .slide img {
+    width: 100%;
+    max-width: 100%;
+    height: 0, auto;
+  }
+}
+/* .slide-show-container {
+  max-width: 100%;
 }
 
 .slide-show-items {
@@ -37,4 +168,4 @@
   position: absolute;
   opacity: 0;
   transition: opacity ease-in-out 0.4s;
-}
+} */
